--- a/src/etc/Translation_it.properties
+++ b/src/etc/Translation_it.properties
@@ -37,7 +37,7 @@ about.dialog.documentation=Documentazione
 about.dialog.general_information=Informazioni generali
 about.dialog.homepage=Homepage
 about.dialog.professional_folder_sharing_tool=Tool professionale di condivisione \ndelle cartelle
-##about.dialog.send_bug_report=Send Bug Report
+about.dialog.send_bug_report=Invia Report Errori
 about.dialog.support=Supporto
 about.dialog.team=Team
 about.dialog.testers=Testers
@@ -64,8 +64,8 @@ addmodifierfriend.description=Aggiunge chi ha modificato il file agli amici
 addmodifierfriend.key=f
 addmodifierfriend.name=Aggiungi chi ha modificato agli amici
 
-##addressEditor.parseerror=<html>Please enter the IPs to be considered on LAN, valid inputs are\:<br>xxx.xxx.xxx.xxx or<br>xxx.xxx.xxx.xxx-yyy.yyy.yyy.yyy</html>
-##addressEditor.title=IP-Range
+addressEditor.parseerror=<html>Si prega di inserire gli IP da considerare nella LAN, inputs validi sono\:<br>xxx.xxx.xxx.xxx o<br>xxx.xxx.xxx.xxx-yyy.yyy.yyy.yyy</html>
+addressEditor.title=Intervalli-IP
 
 chatpanel.cannot_deliver=il messaggio non pu\u00f2 essere consegnato perch\u00e8 '{0}' non \u00e8 connesso
 chatpanel.chat_with=Chat con
@@ -109,14 +109,14 @@ dialog.addmembertofriendlist.explain=(Per aggiungere qualcuno alla tua lista di 
 dialog.addmembertofriendlist.question={0} si \u00e8 collegato ad una o pi\u00f9 cartelle\:\n\n{1}\nvuoi aggiungerlo alla tua lista di amici ora?
 dialog.addmembertofriendlist.title=Aggiungi {0} alla lista degli amici
 dialog.alreadyrunning.exitbutton=Esci
-##dialog.alreadyrunning.startbutton=Start anyways
+dialog.alreadyrunning.startbutton=Inizia comunque
 dialog.alreadyrunning.title=Gi\u00e0 in esecuzione
 dialog.alreadyrunning.warning=PowerFolder \u00e8 gi\u00e0 in esecuzione\n\nConsiglio\: se riavvi PowerFolder, \nelimina tutti i processi javaw/java e prova ancora
-##dialog.binderror=Unable to bind port\!
+dialog.binderror=Impossibile collegare la porta\!
 dialog.connect.connecting=In connessione
 dialog.connect.connecting_to=In connessione a {0}...
 dialog.connection_problem=Problemi di connessione
-##dialog.fatalerror.title=Fatal Error
+dialog.fatalerror.title=Errore Fatale
 dialog.synchronization.choose=Scegli la tua azione di sincronizzazione
 dialog.synchronization.receive_changes=Ricevi le modifiche
 dialog.synchronization.send_and_receive_changes=Invia e ricevi i cambiamenti 
@@ -198,27 +198,27 @@ filelist.status.no_files_available_add_files_and_invite=Nessun file disponibile.
 filelist.status.no_files_available_add_files_in_folder=Nessun file disponibile... Aggiungi file nella tua cartella locale per condividerli
 filelist.status.no_files_available_yet_fetching_filelist=Nessun file ancora disponibile... recupero la lista dei file
 
-##filenameproblem.dialog.add_to_ignore=Add to ignore
-##filenameproblem.dialog.add_to_ignore.explained=Add this file to the list of files that are excluded from sharing
-##filenameproblem.dialog.automatic_rename=Automatic rename
-##filenameproblem.dialog.automatic_rename.explained=removes invalid charaters and or adds "-1", or similair fixes to create a valid (unique) filename
-##filenameproblem.dialog.description=Filename problem(s) detected, select for each file a solution
-##filenameproblem.dialog.do_nothing=Do nothing
-##filenameproblem.dialog.never_ask_this_again=Never ask this again
-##filenameproblem.dialog.solution=Solution
-##filenameproblem.dialog.title=Filename problem(s) detected
-##filenameproblem.duplicate=Duplicate filename found (with different case)
-##filenameproblem.duplicate.description=A filename with the same name is found but it has a different case\:\n{0}\nthis causes problems on windows computers
-##filenameproblem.ends_with_illegal_char=The filename ends with characters that are not recommended
-##filenameproblem.ends_with_illegal_char.description=The filename ends with characters that may cause problems on Windows computers.\nThe characters . and space ( ) are not allowed as last characters on those computers
-##filenameproblem.not_recommended_chars=The filename contains characters that are not recommended
-##filenameproblem.not_recommended_chars_linux.description=The filename contains characters that may cause problems on Unix/Linux computers.\nThe character / is not allowed on those computers
-##filenameproblem.not_recommended_chars_mac_osx.description=The filename contains characters that may cause problems on Mac OSX computers.\nThe characters / and \: are not allowed on those computers
-##filenameproblem.not_recommended_chars_windows.description=The filename contains characters that may cause problems on Windows computers.\nThe characters |\\?*<"\:>/  and "controll" characters (ASCII code 0 till 31)\nare not allowed on those computers
-##filenameproblem.reserved_filename=The filename is a reserved filename on Windows
-##filenameproblem.reserved_filename.description=The filename is a reserved filename on Windows,\nit is recommended not to use this names on windows\:\n CON, PRN, AUX, CLOCK$, NUL COM0, COM1, COM2, COM3,\nCOM4, COM5, COM6, COM7, COM8, COM9, LPT0, LPT1,\nLPT2, LPT3, LPT4, LPT5, LPT6, LPT7, LPT8, and LPT9
-##filenameproblem.to_long=The filename is to long
-##filenameproblem.to_long.description=The filename is longer than 255 characters,\nthis in know to cause problems on Windows, Mac OSX and Unix/Linux computers
+filenameproblem.dialog.add_to_ignore=Aggiungi a ingora
+filenameproblem.dialog.add_to_ignore.explained=Aggiungi questo file alla lista dei file che saranno esclusi dalla condivisione
+filenameproblem.dialog.automatic_rename=Rinomina automaticamente
+filenameproblem.dialog.automatic_rename.explained=rimuove caratteri invalidi e/o aggiunge "-1", o simili per creare un (unico) nome di file valido
+filenameproblem.dialog.description=Rilevato problema con nome di file, selezionare una soluzione per ogni file
+filenameproblem.dialog.do_nothing=Non fare nulla
+filenameproblem.dialog.never_ask_this_again=Non chiederlo pi\u00f9
+filenameproblem.dialog.solution=Soluzione
+filenameproblem.dialog.title=Rilevato problema con nome di file
+filenameproblem.duplicate=Trovato nome di file duplicato (con maiuscole differenti)
+filenameproblem.duplicate.description=\u00c8 stato trovato un file con lo stesso nome ma con maiuscole differenti \:\n{0}\nci\u00f2 causa problemi su pc windows
+filenameproblem.ends_with_illegal_char=Il nome del file termina con caratteri non consigliabili
+filenameproblem.ends_with_illegal_char.description=Il nome del file termina con caratteri che possono causare problemi su pc Windows.\nI caratteri . e spazio ( ) non sono consentiti come ultimi caratteri su questi computers
+filenameproblem.not_recommended_chars=Il nome del file termina con caratteri che non sono consigliabili
+filenameproblem.not_recommended_chars_linux.description=Il nome del file termina con caratteri che possono causare problemi su pc Unix/Linux.\nIl carattere / non \u00e8 consentito su questi computer
+filenameproblem.not_recommended_chars_mac_osx.description=Il nome del file termina con caratteri che possono causare problemi su pc Mac OSX.\nI caratteri / e \: non sono consentiti su questi computers
+filenameproblem.not_recommended_chars_windows.description=Il nome del file termina con caratteri che possono causare problemi su pc Windows .\nI caratteri |\\?*<"\:>/  e i caratteri di "controllo" (codice ASCII da 0 a 31)\nnon sono consentiti su questi computer
+filenameproblem.reserved_filename=Il nome del file \u00e8 un nome riservato su sistemi Windows
+filenameproblem.reserved_filename.description=Il nome del file \u00e8 un nome riservato su sistemi Windows,\nsi raccomanda di non usare questi nomi su windows\:\n CON, PRN, AUX, CLOCK$, NUL COM0, COM1, COM2, COM3,\nCOM4, COM5, COM6, COM7, COM8, COM9, LPT0, LPT1,\nLPT2, LPT3, LPT4, LPT5, LPT6, LPT7, LPT8, e LPT9
+filenameproblem.to_long=Il nome del file \u00e8 troppo lungo
+filenameproblem.to_long.description=Il nome del file \u00e8 pi\u00f9 lungo di 255 caratteri,\ntci\u00f2 causa problemi su computers Windows, Mac OSX e Unix/Linux 
 
 findfriends.description=Inizia ricerca di nuovi amici
 findfriends.key=T
@@ -283,7 +283,7 @@ folderleave.dialog.title=Esci dalla cartella {0} ?
 folderleave.key=E
 folderleave.name=Esci dalla cartella
 
-##folderpanel.chattab.title=Chat
+folderpanel.chattab.title=Chat
 folderpanel.filestab.dropfile_duplicate_dialog.skipall=Salta Tutti I Duplicati
 folderpanel.filestab.dropfile_duplicate_dialog.text=Questa cartella contiene gi\u00e0 un file '{0}' si desidera sovrascrivere il file esistente?
 folderpanel.filestab.dropfile_duplicate_dialog.title=Il file esiste
@@ -339,8 +339,8 @@ general.availability=Disponibilit\u00e0
 general.cancel=Cancella
 general.cancel.key=C     
 general.days={0} giorni
-##general.description=Description
-##general.disconnected=Disconnected
+general.description=Descrizione
+general.disconnected=Disconnesso
 general.downloads=Downloads
 general.estimatedsize=Dimensione stimata
 general.file=File
@@ -560,19 +560,19 @@ preferences.dialog.dyndnsmanager.nomatch.text=Il DynDns inserito non corrisponde
 preferences.dialog.dyndnsmanager.nomatch.title=Il DynDns inserito non corrisponde a questo host. 
 preferences.dialog.errorExpandButton=>>
 preferences.dialog.errorShrinkButton=<<
-##preferences.dialog.findPort=Find port
-##preferences.dialog.findPort.tooltip=<html>Forces PowerFolder to search for a free port,<br>even if one or more ports in the port list are blocked.</html>
+preferences.dialog.findPort=Trova porta
+preferences.dialog.findPort.tooltip=<html>Forza PowerFolder a cercare una porta libera,<br>anche se una o pi\u00f9 porte nella lista sono bloccate.</html>
 preferences.dialog.general.title=Generale
-##preferences.dialog.iplanlist=LAN IP List
+preferences.dialog.iplanlist=Lista di IP nella LAN
 preferences.dialog.language=Linguaggio
 preferences.dialog.lanlinesettings=Velocit\u00e0 di connessione LAN
 preferences.dialog.linesettings=Velocit\u00e0 di connessione Internet
 preferences.dialog.network.title=Rete
 preferences.dialog.networkmode.lanonly=solo LAN
 preferences.dialog.networkmode.lanonly.tooltip=<HTML><BODY>Connetti solo a client PowerFolder nella LAN.<BR>L'unica connessione esterna sar\u00e0 al sito che controlla gli aggiornamenti.<BR>Il tuo firewall rilever\u00e0 una connessione in uscita a 224.0.0.1 o ALL-SYSTEMS.MCAST.NET<BR>Noi usiamo questa per trovare gli altri client PowerFolder nella tua LAN.</BODY></HTML>
-##preferences.dialog.networkmode.name=Connect to
-##preferences.dialog.networkmode.private=LAN and Internet
-##preferences.dialog.networkmode.private.tooltip=<HTML><BODY>Enables file transfers over LAN and Internet.<BR>Actually only connects to friends, user on LAN and people, who are on joined folders.<BR>Further PowerFolder connects to supernodes to find your friends in the internet.</BODY></HTML>
+preferences.dialog.networkmode.name=Connetti a 
+preferences.dialog.networkmode.private=LAN e Internet
+preferences.dialog.networkmode.private.tooltip=<HTML><BODY>Abilita il trasferimento file sulla LAN e Internet.<BR>Attualmente connette solo ad amici, utenti sulla LAN e persone, che sono in cartelle condivise.<BR>Inoltre PowerFolder si connette a supernodi per trovare i tuoi amici su internet.</BODY></HTML>
 preferences.dialog.nickname=Nome utente
 preferences.dialog.nonwindowsinfo=Attenzione\: alcune impostazioni non sono disponibili su sistemi Windows
 preferences.dialog.plugin.classname=Java classname
@@ -582,8 +582,8 @@ preferences.dialog.plugin.status=Stato
 preferences.dialog.plugin.status_disabled=Disabilitato
 preferences.dialog.plugin.status_enabled=Abilitato
 preferences.dialog.plugin.title=Plugin
-##preferences.dialog.randomPort=Automatically find a port
-##preferences.dialog.randomPort.tooltip=PowerFolder will try to bind random port. 
+preferences.dialog.randomPort=Trova una porta automaticamente
+preferences.dialog.randomPort.tooltip=PowerFolder cercher\u00e0 di collegarsi ad una porta a caso.
 preferences.dialog.restarttext=Alcune modifiche richiedono un riavvio del programma.\nVuoi riavviare PowerFolder ?\n 
 preferences.dialog.restarttitle=Richiesto riavvio
 preferences.dialog.showadvanced=Mostra preferenze avanzate
@@ -610,23 +610,23 @@ previewfiles.description=Anteprima dei file di questa cartella
 previewfiles.key=p
 previewfiles.name=Anteprima
 
-##pro.security.autoacceptfriendkeys=Automatically accept first time public keys from friends
-##pro.security.high=High
-##pro.security.high_info=High security (default)\:
-##pro.security.inet_encryption_preferred=Internet\: Encrypted connections are not required.
-##pro.security.inet_encryption_required=Internet\: Only encrypted connections are accepted.
-##pro.security.keymismatch=The public key of {0} mismatches the internal keystore.\nDo you want to accept his new key now?
-##pro.security.lan_encryption_preferred=LAN\:      Encrypted connections are not required.
-##pro.security.lan_encryption_required=LAN\:      Only encrypted connections are accepted.
-##pro.security.low=Low
-##pro.security.low_info=Low security\:
-##pro.security.maximum=Maximum
-##pro.security.maximum_info=Maximum security\:
-##pro.security.newkey=New Key detected
-##pro.security.nokeyfound=No public key for {0} found in internal keystore.\nDo you want to accept his new key now?
-##pro.security.possiblebreach=Possible security breach
-##pro.security.secure=secure
-##pro.security.securitysettings=Security Settings
+pro.security.autoacceptfriendkeys=Accetta automaticamente la prima volta le chiavi pubbliche deglia amici
+pro.security.high=Alto
+pro.security.high_info=Alta sicurezza (default)\:
+pro.security.inet_encryption_preferred=Internet\: Non sono richieste connessioni criptate.
+pro.security.inet_encryption_required=Internet\: Sono accettate solo le connessioni criptate.
+pro.security.keymismatch=La chiave pubblica di {0} non corrisponde alle chiavi raccolte.\nVuoi accettare questa nuova chiave ora?
+pro.security.lan_encryption_preferred=LAN\:      Non sono richieste connessioni criptate.
+pro.security.lan_encryption_required=LAN\:      Vengono accettate solo connessioni criptate.
+pro.security.low=Basso
+pro.security.low_info=Sicurezza bassa\:
+pro.security.maximum=Massimo
+pro.security.maximum_info=Sicurezza massima\:
+pro.security.newkey=Rilevata nuova chiave 
+pro.security.nokeyfound=Nessuna chiave pubblica {0} trovata nella raccolta delle chiavi.\nVuoi accettare questa nuova chiave ora?
+pro.security.possiblebreach=Possibile buco di sicurezza
+pro.security.secure=sicuro
+pro.security.securitysettings=Impostazioni di Sicurezza
 
 publicfolders.filter.show_empty_folders=Mostra le cartelle vuote
 publicfolders.lastModified=Ultima modifica\t
@@ -659,10 +659,10 @@ quickinfo.root.syncing=Sincronizzazione in corso...
 quickinfo.root.title=Benvenuto in PowerFolder\!
 quickinfo.upload.active={0} upload(s) attivo
 quickinfo.upload.title=Stato Upload 
-##quickinfo.user.isconnectedinet=Is on the Internet
-##quickinfo.user.isconnectedlan=Is on LAN
-##quickinfo.user.isdiconnected=Is disconnected
-##quickinfo.user.secureconnected=securely connected
+quickinfo.user.isconnectedinet=\u00c8 in Internet
+quickinfo.user.isconnectedlan=\u00c8 sulla LAN
+quickinfo.user.isdiconnected=\u00c8 disconnesso
+quickinfo.user.secureconnected=connesso in modo sicuro
 
 reconnect.description=Riconnettiti a questo utente ora
 reconnect.key=r
@@ -757,10 +757,10 @@ startdownloads.key=A
 startdownloads.name=Apri
 
 status.download=Down\: %.2f KB/s
-##status.port=Port\: {0}
+status.port=Porta\: {0}
 status.upload=Up\: %.2f KB/s
 
-##statusbar.synchronizing=Synchronizing...
+statusbar.synchronizing=Sincronizzazione in corso...
 
 synchronisation.notice.title=Profilo si sincronizzazione {0} attivato
 synchronisation.warning.automatic_deletions=Questa modalit\u00e0 sincronizzer\u00e0 anche la cancellazione di file\!\nContinui ?
@@ -815,8 +815,8 @@ unignorefile.name=Rimuovi da Ignora
 
 wizard.basicsetup.enternick=Inserisci il tuo nickname
 wizard.basicsetup.lanonly=solo LAN
-##wizard.basicsetup.networking=Connect to
-##wizard.basicsetup.private=LAN and Internet
+wizard.basicsetup.networking=Connetti a
+wizard.basicsetup.private=LAN e Internet
 wizard.basicsetup.title=Impostazioni di base
 wizard.choosedisklocation.select=Scegli la directory
 wizard.choosedisklocation.title=Percorso su disco
@@ -854,13 +854,13 @@ wizard.projectsync.takepartsync=Prendi parte ad una sincronizzazione
 wizard.projectsync.title=Sincronizzazione di un progetto
 wizard.sendinvitations.joinsync=I file di invito sono richiesti per accedere ad una sincronizzazione
 wizard.sendinvitations.neveruntrusted=Non dare mai i tuoi file di invito a persone non fidate
-##wizard.sendinvitations.offline=Not connected
-##wizard.sendinvitations.overpf=Via PowerFolder now
-##wizard.sendinvitations.savetofile=Save as file
-##wizard.sendinvitations.sendbymail=Send by mail
-##wizard.sendinvitations.sendinvitation=Send invitation
-##wizard.sendinvitations.sendsuccess=Invitation sent
-##wizard.sendinvitations.sendsuccessinfo=You successfully sent the invitation.
+wizard.sendinvitations.offline=Non connesso
+wizard.sendinvitations.overpf=Via PowerFolder ora
+wizard.sendinvitations.savetofile=Salva come file
+wizard.sendinvitations.sendbymail=Invia per email
+wizard.sendinvitations.sendinvitation=Invia invito
+wizard.sendinvitations.sendsuccess=Invito spedito
+wizard.sendinvitations.sendsuccessinfo=L'invito \u00e8 stato mandato con successo.
 wizard.sendinvitations.title=Salva un invito
 wizard.setupdns.dyndnshomepage=Dyndns Homepage
 wizard.setupdns.enterdns=Inserisci il tuo dns (dinamico)
