--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -37,7 +37,7 @@ about.dialog.documentation=Dokumentation
 about.dialog.general_information=Allgemeine Information
 about.dialog.homepage=Homepage
 about.dialog.professional_folder_sharing_tool=Professionelle Dateisychronisation
-##about.dialog.send_bug_report=Send Bug Report
+about.dialog.send_bug_report=Fehler melden
 about.dialog.support=Support
 about.dialog.team=Team
 about.dialog.testers=Tester
@@ -64,8 +64,8 @@ addmodifierfriend.description=F\u00fcgt den Bearbeiter der Datei zur Freundeslis
 addmodifierfriend.key=f
 addmodifierfriend.name=Freund hinzuf\u00fcgen
 
-##addressEditor.parseerror=<html>Please enter the IPs to be considered on LAN, valid inputs are\:<br>xxx.xxx.xxx.xxx or<br>xxx.xxx.xxx.xxx-yyy.yyy.yyy.yyy</html>
-##addressEditor.title=IP-Range
+addressEditor.parseerror=<html>Bitte geben Sie die IP-Adressen des LANs ein, Gültige Eingaben sind\:<br>xxx.xxx.xxx.xxx oder<br>xxx.xxx.xxx.xxx-yyy.yyy.yyy.yyy</html>
+addressEditor.title=LAN-IP-Bereich
 
 chatpanel.cannot_deliver=Die Nachricht konnte nicht zugestellt werden, da '{0}' nicht verbunden ist\!
 chatpanel.chat_with=Chat mit
@@ -109,14 +109,14 @@ dialog.addmembertofriendlist.explain=Hinweis\: Freunde d\u00fcrfen die Inhalten 
 dialog.addmembertofriendlist.question={0} ist folgenden Foldern beigetreten\:\n\n{1}\nM\u00f6chten Sie {0} jetzt zur Freundeliste hinzuf\u00fcgen?
 dialog.addmembertofriendlist.title={0} zur Freundesliste
 dialog.alreadyrunning.exitbutton=Ende
-##dialog.alreadyrunning.startbutton=Start anyways
+dialog.alreadyrunning.startbutton=Trotzdem starten
 dialog.alreadyrunning.title=L\u00e4uft bereits
 dialog.alreadyrunning.warning=PowerFolder l\u00e4uft bereits
-##dialog.binderror=Unable to bind port\!
+dialog.binderror=Der Netzwerk Port is bereits belegt
 dialog.connect.connecting=Verbinde
 dialog.connect.connecting_to=Verbinde zu {0}...
 dialog.connection_problem=Verbindungsproblem
-##dialog.fatalerror.title=Fatal Error
+dialog.fatalerror.title=Schwerer Fehler
 dialog.synchronization.choose=Bitte die Synchronisationoption ausw\u00e4hlen
 dialog.synchronization.receive_changes=\u00c4nderunge erhalten
 dialog.synchronization.send_and_receive_changes=\u00c4nderungen ver\u00f6ffentlichen und neue erhalten
@@ -198,7 +198,7 @@ filelist.status.no_files_available_add_files_and_invite=Keine Dateien verf\u00fc
 filelist.status.no_files_available_add_files_in_folder=Keine Dateien verf\u00fcbar... F\u00fcgen Sie dem Folder Dateien hinzu
 filelist.status.no_files_available_yet_fetching_filelist=Dateiliste wird abgerufen...
 
-##filenameproblem.dialog.add_to_ignore=Add to ignore
+filenameproblem.dialog.add_to_ignore=Zu den Ausschlüssen
 ##filenameproblem.dialog.add_to_ignore.explained=Add this file to the list of files that are excluded from sharing
 ##filenameproblem.dialog.automatic_rename=Automatic rename
 ##filenameproblem.dialog.automatic_rename.explained=removes invalid charaters and or adds "-1", or similair fixes to create a valid (unique) filename
@@ -283,7 +283,7 @@ folderleave.dialog.title=Folder {0} verlassen ?
 folderleave.key=V
 folderleave.name=Folder verlassen
 
-##folderpanel.chattab.title=Chat
+folderpanel.chattab.title=Chat
 folderpanel.filestab.dropfile_duplicate_dialog.skipall=Doppelte \u00fcberspringen
 folderpanel.filestab.dropfile_duplicate_dialog.text=Dieser Folder enh\u00e4lt '{0}' bereits. M\u00f6chten Sie diese Datei \u00fcberschreiben?
 folderpanel.filestab.dropfile_duplicate_dialog.title=Datei bereits vorhanden
@@ -339,7 +339,7 @@ general.availability=Verf\u00fcgbarkeit
 general.cancel=Abbrechen
 general.cancel.key=A
 general.days={0} Tage
-##general.description=Description
+general.description=Beschreibung
 general.disconnected=Nicht verbunden
 general.downloads=Downloads
 general.estimatedsize=gesch\u00e4tzte Gr\u00f6\u00dfe
@@ -563,27 +563,27 @@ preferences.dialog.dyndnsUserName=Benutzername
 ##preferences.dialog.findPort=Find port
 ##preferences.dialog.findPort.tooltip=<html>Forces PowerFolder to search for a free port,<br>even if one or more ports in the port list are blocked.</html>
 preferences.dialog.general.title=Allgemein
-##preferences.dialog.iplanlist=LAN IP List
+preferences.dialog.iplanlist=LAN IP Liste
 preferences.dialog.language=Sprache
 preferences.dialog.lanlinesettings=LAN Geschwindingkeit
 preferences.dialog.linesettings=Inet Geschwindigkeit
 preferences.dialog.network.title=Netzwerk
 preferences.dialog.networkmode.lanonly=Nur LAN
 ##preferences.dialog.networkmode.lanonly.tooltip=<HTML><BODY>Connect only to PowerFolder clients in the Local Area Network.<BR>The only connection out will be to the update check site.<BR>Your firewall will maybe detect an outgoing connection to 224.0.0.1 or ALL-SYSTEMS.MCAST.NET<BR>We use that to detect the other PowerFolder clients in your LAN.</BODY></HTML>
-##preferences.dialog.networkmode.name=Connect to
+preferences.dialog.networkmode.name=Verbindungen
 preferences.dialog.networkmode.private=LAN und Internet
 ##preferences.dialog.networkmode.private.tooltip=<HTML><BODY>Enables file transfers over LAN and Internet.<BR>Actually only connects to friends, user on LAN and people, who are on joined folders.<BR>Further PowerFolder connects to supernodes to find your friends in the internet.</BODY></HTML>
 preferences.dialog.nickname=Benutzername
 preferences.dialog.nonwindowsinfo=Hinweis\: Einige Einstellung sind nur Benutzern von Windows m\u00f6glich\!
 ##preferences.dialog.plugin.classname=Java classname
-##preferences.dialog.plugin.description=Description
-##preferences.dialog.plugin.name=Name
+preferences.dialog.plugin.description=Beschreibung
+preferences.dialog.plugin.name=Name
 ##preferences.dialog.plugin.status=Status
 ##preferences.dialog.plugin.status_disabled=Disabled
 ##preferences.dialog.plugin.status_enabled=Enabled
-##preferences.dialog.plugin.title=Pro Settings
-##preferences.dialog.randomPort=Automatically find a port
-##preferences.dialog.randomPort.tooltip=PowerFolder will try to bind random port. 
+preferences.dialog.plugin.title=Pro Einstellungen
+preferences.dialog.randomPort=Automatisch einen Port finden
+preferences.dialog.randomPort.tooltip=PowerFolder sucht nach einem freien Netzwerk Port. 
 preferences.dialog.restarttext=Einige \u00c4nderungen ben\u00f6tigen einen Neustart von PowerFolder.\nWollen Sie jetzt neu starten ?\n 
 preferences.dialog.restarttitle=Neustart angefordert
 preferences.dialog.showadvanced=Zeige erweiterte Einstellungen
@@ -598,7 +598,7 @@ preferences.dialog.statusWaitDynDns=Bitte warten Sie, w\u00e4hrend DynDns {0} \u
 preferences.dialog.title=Einstellungen
 preferences.dialog.titleProcessing=Arbeite...
 preferences.dialog.useziponlan=ZIP Kompression im LAN verwenden 
-##preferences.dialog.useziponlan.tooltip=Enable if files to transfer are easy to compress (this may effect your CPU load)
+preferences.dialog.useziponlan.tooltip=Nutzen Sie die Einstellung, wenn die ZIP Kompression im bei LAN Übertragungen aktiviert werden soll.
 preferences.dialog.warnningMessage=Warnung
 preferences.dialog.xbehavior=Beim Schlie\u00dfen von PowerFolder
 preferences.dialog.xbehavior.exit=Programm beenden
@@ -610,23 +610,23 @@ previewfiles.description=Dateivorschau f\u00fcr diesen Folder
 previewfiles.key=V
 previewfiles.name=Vorschau
 
-##pro.security.autoacceptfriendkeys=Automatically accept first time public keys from friends
-##pro.security.high=High
-##pro.security.high_info=High security (default)\:
-##pro.security.inet_encryption_preferred=Internet\: Encrypted connections are not required.
-##pro.security.inet_encryption_required=Internet\: Only encrypted connections are accepted.
-##pro.security.keymismatch=The public key of {0} mismatches the internal keystore.\nDo you want to accept his new key now?
-##pro.security.lan_encryption_preferred=LAN\:      Encrypted connections are not required.
-##pro.security.lan_encryption_required=LAN\:      Only encrypted connections are accepted.
-##pro.security.low=Low
-##pro.security.low_info=Low security\:
-##pro.security.maximum=Maximum
-##pro.security.maximum_info=Maximum security\:
-##pro.security.newkey=New Key detected
-##pro.security.nokeyfound=No public key for {0} found in internal keystore.\nDo you want to accept his new key now?
-##pro.security.possiblebreach=Possible security breach
-##pro.security.secure=secure
-##pro.security.securitysettings=Security Settings
+pro.security.autoacceptfriendkeys=Ersten öffentlichen Schlüssel eines Freudes automatisch akzeptieren.
+pro.security.high=Hoch
+pro.security.high_info=Hoche Sicherheit (Standart)\:
+pro.security.inet_encryption_preferred=Internet\: Unverschlüsselte Verbindungen zulassen.
+pro.security.inet_encryption_required=Internet\: Nur verschlüsselte Verbindungen zulassen.
+pro.security.keymismatch=Der öffentliche Schlüssel von {0} konnte nicht verifiziert werden.\nSoll der neue Schlüssel nun gespeichert werden?
+pro.security.lan_encryption_preferred=LAN\:      Unverschlüsselte Verbindungen zulassen.
+pro.security.lan_encryption_required=LAN\:      Nur verschlüsselte Verbindungen zulassen.
+pro.security.low=Niedrig
+pro.security.low_info=Niedrige Sicherheit\:
+pro.security.maximum=Maximal
+pro.security.maximum_info=Maximale Sicherheit\:
+pro.security.newkey=Neuer Schlüssel entdeckt
+pro.security.nokeyfound=Kein öffentlicher Schlüssel für {0} gefunden.\nSoll der Schlüssel nun gespeichert werden?
+pro.security.possiblebreach=Möglicher Sicherheitsbruch
+pro.security.secure=sicher
+pro.security.securitysettings=Sicherheitseinstellungen
 
 publicfolders.filter.show_empty_folders=Zeige leere Folder
 publicfolders.lastModified=Zuletz ge\u00e4ndert
@@ -756,9 +756,9 @@ startdownloads.description=\u00d6ffnet die ausgew\u00e4hlte und fertig herunterg
 startdownloads.key=s
 startdownloads.name=\u00d6ffnen
 
-##status.download=Down\: %.2f KB/s
-##status.port=Port\: {0}
-##status.upload=Up\: %.2f KB/s
+status.download=Down\: %.2f KB/s
+status.port=Port\: {0}
+status.upload=Up\: %.2f KB/s
 
 statusbar.synchronizing=Synchronisiere...
 
@@ -783,14 +783,14 @@ systray.hide=Verstecken
 systray.powerfolder=PowerFolder v{0}
 systray.show=Anzeigen
 systray.syncall=Jetzt Synchronisieren
-##systray.tooltip.down=Down {0} KBs
-##systray.tooltip.down.mb=Down {0} MBs
+systray.tooltip.down=Down {0} KBs
+systray.tooltip.down.mb=Down {0} MBs
 systray.tooltip.insync=Synchronisiert
 systray.tooltip.syncing=Synchronisiere...
-##systray.tooltip.up=Up {0} KBs
-##systray.tooltip.up.mb=Up {0} MBs
+systray.tooltip.up=Up {0} KBs
+systray.tooltip.up.mb=Up {0} MBs
 
-##title.friends=Friends
+title.friends=Freunde
 title.my.folders=Meine Folder 
 ##title.network.statistics=Network Statistics
 title.public.folder=\u00d6ffentlicher Folder
